TL-120: Fix header right region vertical align on mobile.

--- a/themes/custom/generic_microsite/less/style.less
+++ b/themes/custom/generic_microsite/less/style.less
@@ -134,10 +134,9 @@ header.container {
 }
 
 .header-right {
-  float: right;
   margin-right: 20px;
-  .valign-child;
-  transform: translateY(50%);
+  margin-top: 1.3em;
+  text-align: right;
   @media (min-width: @screen-sm) {
     float: right;
     margin-bottom: 0;
